Downgrade to 1.8